FireAlarmApplication.Web/mtg_debug_20260127_164558.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:45:58
NetCDF: C:\Users\kubil\AppData\Local\Temp\e409fd9e-29f7-4731-a84b-addbb1f50099.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
